@@ -1,5 +1,12 @@
 2009-09-14  Miguel de Dios  <miguel.dedios@artica.es>
 
+	* godmode/agentes/module_manager.php: change the method for test if a
+	module is a numeric, and can normalize. Now obtain the ids from modules tipe
+	that it's not proc or string, and this ids use to test.
+	Fixes: 2849325
+
+2009-09-14  Miguel de Dios  <miguel.dedios@artica.es>
+
 	* godmode/reporting/map_builder.php: change (at the moment) the ajax for
 	delete elements by html static form with select, because sometimes (when you
 	try delete elements with bigger dimensions fail).
